--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
+
     background: #181818;
     height: 70px;
     display: flex;
