--- a/css/newsMain.css
+++ b/css/newsMain.css
@@ -15,13 +15,13 @@ main {
     margin-bottom: 18px;
 }
 
-.full-news-container h1 {
+.full-news-container > h1 {
     font-size: 35px;
     line-height: 120%;
     margin-bottom: 33px;
 }
 
-.full-news-container img {
+.full-news-container > img {
     width: 780px;
     height: 407px;
     margin-bottom: 34px;
@@ -61,13 +61,6 @@ main {
     margin-bottom: 45px;
 }
 
-.comments-container .add-container img {
-    border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    margin-right: 21px;
-}
-
 .comments-container .add-container > div {
     width: 690px;
 }
@@ -77,6 +70,7 @@ main {
     border: none;
     border-bottom: 1px solid #ECECEC;
     padding-bottom: 4px;
+    font-size: 16px;
     width: 100%;
     margin-bottom: 11px;
 }
@@ -94,8 +88,58 @@ main {
     font-weight: 500;
 }
 
-.comments-container .add-container .button-container button.add-button{
+.comments-container .add-container .button-container button.add-button {
     background: #FF1850;
     color: #ffffff;
     font-weight: 600;
+}
+
+.user-comment-image {
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    margin-right: 21px;
+}
+
+.subcomment-user-logo {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    margin-right: 23px;
+}
+
+.comment-container {
+    display: flex;
+    font-size: 16px;
+    line-height: 150%;
+}
+
+.comment-container > div > .username {
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
+.comment-container > div > .comment-text {
+    margin-bottom: 8px;
+}
+
+.comment-container > div > .comment-text .answer-reference{
+    color: #FF1850;
+}
+
+.comment-container > div > .answer{
+    color: #888888;
+    font-weight: 500;
+}
+.comment-container > div >.hide-show{
+    color: #FF1850;
+    display: flex;
+    align-items: center;
+    margin-bottom: 17px;
+    margin-top: 8px;
+    font-weight: 500;
+}
+
+.comment-container > div >.hide-show > img{
+    margin-right: 12px;
 }
