--- a/css/indexMain.css
+++ b/css/indexMain.css
@@ -29,6 +29,8 @@ main {
 .main-news-container > .big-news-container a {
     text-decoration: none;
     color: #000000;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-news-container > .big-news-container > img {
@@ -69,21 +71,29 @@ main {
     margin-bottom: 26px;
 }
 
-.small-news-container >a{
+.small-news-container > a {
     text-decoration: none;
     color: #000000;
+    display: flex;
+}
+
+.small-news-container >.image-link{
+    margin-bottom: 15px;
+}
+
+.small-news-container > .header {
+    margin-top: 11px;
+    margin-bottom: 11px;
 }
 
 .small-news-container > a > img {
     width: 240px;
-    margin-bottom: 15px;
 }
 
 .small-news-container > a > h2 {
     font-size: 14px;
+    margin-bottom: 0;
+    font-weight: 600;
+    line-height: 135%;
 }
 
-.small-news-container > h2 {
-    margin-top: 8px;
-    margin-bottom: 11px;
-}
