add router/ create main page component

--- a/oldFront/css/indexMain.css
+++ b/oldFront/css/indexMain.css
@@ -19,7 +19,7 @@ main {
     margin-right: 6px;
 }
 
-/*main news*/
+/*main mainPage*/
 .main-news-container {
     width: 690px;
     display: flex;
