--- a/frontend/src/commonCss/colors.scss
+++ b/frontend/src/commonCss/colors.scss
@@ -7,4 +7,4 @@ $brandcolor: #FF1850;
 $header_background_color: #181818;
 $header_text_color: #ffffff;
 
-$background_color: #E5E5E5;
+$background_color: #ffffff;
