--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,12 +1,18 @@
+@import './commonCss/colors';
+
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    line-height: 150%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 150%;
+}
+
+body {
+  background: $background_color;
 }
 
 main {
-    width: 1230px;
-    margin: 31px auto 0;
-    display: flex;
+  width: 1230px;
+  margin: 31px auto 0;
+  display: flex;
 }
