create tag component

--- a/frontend/src/components/tagsFIlter/tagsFilter.module.scss
+++ b/frontend/src/components/tagsFIlter/tagsFilter.module.scss
@@ -2,7 +2,7 @@
 
 nav {
   display: flex;
-  color: $header_text_color;
+  color: $light_text_color;
   width: 980px;
   justify-content: space-between;
   font-weight: 600;
