--- a/frontend/src/commonCss/colors.scss
+++ b/frontend/src/commonCss/colors.scss
@@ -5,6 +5,6 @@ $verylightgrey: #ECECEC;
 $brandcolor: #FF1850;
 
 $header_background_color: #181818;
-$header_text_color: #ffffff;
+$light_text_color: #ffffff;
 
 $background_color: #ffffff;
