--- a/frontend/src/commonCss/colors.scss
+++ b/frontend/src/commonCss/colors.scss
@@ -5,6 +5,8 @@ $verylightgrey: #ECECEC;
 $brandcolor: #FF1850;
 
 $header_background_color: #181818;
+
 $light_text_color: #ffffff;
+$dark_text_color: #000000;
 
 $background_color: #ffffff;
