--- a/frontend/src/components/bigNewsCard/bigNewsCard.module.scss
+++ b/frontend/src/components/bigNewsCard/bigNewsCard.module.scss
@@ -2,22 +2,24 @@
 
 .bigNewsContainer {
   margin-bottom: 54px;
-  a{
+
+  >a {
     text-decoration: none;
     color: $dark_text_color;
     display: flex;
     flex-direction: column;
   }
+
   img {
     width: 690px;
     height: 360px;
   }
 
-  .info-container {
+  .infoContainer {
     display: flex;
     margin-top: 20px;
     align-items: center;
-    color: #888888;
+    color: $midgrey;
     font-size: 12px;
   }
 
