add smallNewsCard component

--- a/frontend/src/components/bigNewsCard/bigNewsCard.module.scss
+++ b/frontend/src/components/bigNewsCard/bigNewsCard.module.scss
@@ -3,7 +3,7 @@
 .bigNewsContainer {
   margin-bottom: 54px;
 
-  >a {
+  .newsLink {
     text-decoration: none;
     color: $dark_text_color;
     display: flex;
