--- a/frontend/src/components/tagsFIlter/tagsFilter.module.scss
+++ b/frontend/src/components/tagsFIlter/tagsFilter.module.scss
@@ -7,9 +7,13 @@ nav {
   justify-content: space-between;
   font-weight: 600;
   font-size: 16px;
-}
 
-nav > div:hover {
-  color: $midgrey;
-  cursor: pointer;
+  > a {
+    color: $light_text_color;
+
+    &:hover {
+      color: $midgrey;
+      cursor: pointer;
+    }
+  }
 }
