--- a/frontend/src/components/buttonContainer/buttonContainer.module.scss
+++ b/frontend/src/components/buttonContainer/buttonContainer.module.scss
@@ -8,6 +8,7 @@
     border: none;
     background: none;
     font-weight: 500;
+    cursor: pointer;
 
     &.addButton {
       background: #FF1850;
