--- a/frontend/src/components/signForm/signForm.module.scss
+++ b/frontend/src/components/signForm/signForm.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 100;
   left: 0;
-  top:0;
+  top: 0;
   width: 100vw;
   height: 100vh;
   background: rgba(217, 217, 217, 0.8);
@@ -14,6 +14,6 @@
   .signForm {
     width: 400px;
     padding: 35px;
+    background: #ffffff;
   }
-
 }
