--- a/frontend/src/components/userFormButton/userFormButton.module.scss
+++ b/frontend/src/components/userFormButton/userFormButton.module.scss
@@ -2,4 +2,7 @@
   background: #000000;
   padding: 11px 35px 14px;
   color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
