--- a/frontend/src/components/signForm/signForm.module.scss
+++ b/frontend/src/components/signForm/signForm.module.scss
@@ -15,5 +15,8 @@
     width: 400px;
     padding: 35px;
     background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
