made common user page

--- a/frontend/src/components/logoutButton/logoutButton.module.scss
+++ b/frontend/src/components/logoutButton/logoutButton.module.scss
@@ -2,7 +2,8 @@
 
 .logoutButton {
   color: $brandcolor;
-  margin: 11px 36px 14px;
+  margin-top: 10px;
+  padding: 11px 36px 14px;
   background: none;
   border: none;
 }
