--- a/frontend/src/components/comment/comment.module.scss
+++ b/frontend/src/components/comment/comment.module.scss
@@ -1,7 +1,7 @@
 .commentContainer {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 
   .subCommentsContainer {
     width: 690px;
