--- a/frontend/src/components/signUpForm/signUpForm.module.scss
+++ b/frontend/src/components/signUpForm/signUpForm.module.scss
@@ -1,18 +1,10 @@
-@import '../../commonCss/colors';
-
 .errorContainer {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-  .error {
-    color: $brandcolor;
-    font-weight: normal;
-    font-size: 11px;
-    line-height: 11px;
-  }
 }
 
-.login {
+.username {
   margin-top: 27px;
   margin-bottom: 18px;
 }
