--- a/frontend/src/components/fullNews/fullNews.module.scss
+++ b/frontend/src/components/fullNews/fullNews.module.scss
@@ -1,7 +1,6 @@
 .fullNewsContainer {
-  margin-left: 180px;
-  width: 780px;
-  margin-right: 30px;
+  width: 100%;
+
 
   .infoContainer {
     margin-bottom: 18px;
