--- a/frontend/src/components/oneNewsCommentsContainer/oneNewsCommentsContainer.module.scss
+++ b/frontend/src/components/oneNewsCommentsContainer/oneNewsCommentsContainer.module.scss
@@ -9,6 +9,7 @@
     padding-bottom: 16px;
     margin-bottom: 46px;
     border-bottom: 1px solid $verylightgrey;
+    display: flex;
 
     > span {
       color: $dark_text_color;
