--- a/frontend/src/components/fullNews/fullNews.module.scss
+++ b/frontend/src/components/fullNews/fullNews.module.scss
@@ -1,9 +1,13 @@
 .fullNewsContainer {
   width: 100%;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   .infoContainer {
     margin-bottom: 18px;
+    width: 100%;
   }
 
   > h1 {
