--- a/frontend/src/components/newsColumnLayout/newsColumnLayout.module.scss
+++ b/frontend/src/components/newsColumnLayout/newsColumnLayout.module.scss
@@ -5,4 +5,11 @@
     font-size: 20px;
     margin-bottom: 23px;
   }
+
+  > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
