--- a/frontend/src/components/addNewsImage/addNewsImage.module.scss
+++ b/frontend/src/components/addNewsImage/addNewsImage.module.scss
@@ -1,3 +1,9 @@
+@import '../../commonCss/colors';
+
+.error {
+  border: 1px solid $brandcolor;
+}
+
 .imageContainer {
   width: 100%;
   height: 407px;
@@ -12,7 +18,8 @@
     width: 66px;
     height: 66px;
   }
-  input{
+
+  input {
     display: none;
   }
 }
